Update endpoint configuration
